Bug 112408 - Help button in presenter console makes LO crash
Summary: Help button in presenter console makes LO crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.1.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.2
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-15 12:48 UTC by pieter kristensen
Modified: 2017-09-15 18:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
the help button (18.12 KB, image/jpeg)
2017-09-15 12:48 UTC, pieter kristensen
Details
6.0 crashes on touching the help-button in the presenter console (60.44 KB, image/jpeg)
2017-09-15 14:51 UTC, pieter kristensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pieter kristensen 2017-09-15 12:48:12 UTC
Created attachment 136263 [details]
the help button

When I touch the help-button in the presenter console LO crashes a) immediately and b) always.
I use LO 5.4.1 on kde neon plasma 5.10.5

I could not test with other configurations.
Comment 1 Xisco Faulí 2017-09-15 14:16:19 UTC
I can't reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: 383aab7ed63bf30931c1cf89138707d2228b5dce
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

nor in

Version: 6.0.0.0.alpha0+
Build ID: 383aab7ed63bf30931c1cf89138707d2228b5dce
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

kde only?
Comment 2 pieter kristensen 2017-09-15 14:26:29 UTC
Oh that is clever! I will try in 6.0 too. But it's not super easy to get the second monitor. I will let you know!
Comment 3 pieter kristensen 2017-09-15 14:51:10 UTC
Created attachment 136266 [details]
6.0 crashes on touching the help-button in the presenter console
Comment 4 pieter kristensen 2017-09-15 14:54:43 UTC
LO left a "crash report" crashreport.libreoffice.org/stats/crash_details/a0d48498-8753-41b0-add2-42892c82f70
Is this on my local machine?
Comment 5 Xisco Faulí 2017-09-15 14:56:39 UTC Comment hidden (obsolete)
Comment 6 Caolán McNamara 2017-09-15 15:14:22 UTC
I can reproduce this in 5.3. The font ascent is 0 so there's a divide by zero. I suspect from the ascent issue that this may be related to bug 107249 and might be fixed as a side effect of that too.
Comment 7 pieter kristensen 2017-09-15 15:20:36 UTC
I don't understand at all what you say but it sounds promissing.
Keep up the good work!
Comment 8 Commit Notification 2017-09-15 15:22:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6af9bba906e4c2a1602a3cbc50df874808417491

Resolves: tdf#112408 crash with nan with bad ascent

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2017-09-15 15:25:02 UTC
backport to 5.4 in gerrit for review
Comment 10 Commit Notification 2017-09-15 18:56:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cc369b3447da7f354901a79007b5db6f98379189&h=libreoffice-5-4

Resolves: tdf#112408 crash with nan with bad ascent

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.