Resolves: tdf#112408 crash with nan with bad ascent

bad ascent in the common case is probably fixed with tdf#107249

Change-Id: I0a06de06cb07277c50dcffd1b6a1121398e84e42